<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/expenseRowTemplate"
    android:background="#006699"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:text="@string/expense_name_text"
        android:id="@+id/expenseNameText"
        android:textColor="#ff000000"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingLeft="30dp"
        android:paddingTop="5dp"
        android:paddingRight="5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/due_date_text"
        android:id="@+id/dueDateText"
        android:layout_gravity="right"
        android:paddingRight="15dp"
        android:paddingBottom="5dp"
        android:singleLine="false"
        android:textStyle="bold|italic"
        android:layout_alignTop="@+id/expenseAmountText"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="29dp"
        android:layout_marginLeft="29dp"
        android:textSize="15sp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expense_amount_text"
        android:id="@+id/expenseAmountText"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        android:layout_gravity="right"
        android:textColor="@android:color/holo_green_dark"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"
        android:layout_below="@+id/expenseNameText"
        android:textAlignment="gravity"
        android:gravity="center"
        android:padding="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/author_text"
        android:id="@+id/authorText"
        android:layout_gravity="right"
        android:paddingRight="15dp"
        android:textSize="15sp"
        android:layout_below="@+id/dueDateText"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:paddingTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/expense_description_text"
        android:id="@+id/expenseNotesText"
        android:layout_below="@+id/authorText"
        android:layout_alignStart="@+id/dueDateText"
        android:layout_alignLeft="@+id/dueDateText"
        android:layout_toStartOf="@+id/authorText"
        android:layout_toLeftOf="@+id/authorText"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_alignEnd="@+id/expenseAmountText"
        android:layout_alignRight="@+id/expenseAmountText"
        android:textSize="15sp"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/paid_status_text"
        android:id="@+id/expenseStatusText"
        android:layout_gravity="right"
        android:paddingRight="15dp"
        android:textSize="15sp"
        android:paddingTop="10dp"
        android:layout_below="@+id/dueDateText"
        android:layout_alignStart="@+id/dueDateText"
        android:layout_alignLeft="@+id/dueDateText" />

</RelativeLayout>