<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/expenseDialog">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/expense_description_edit_text"
        android:id="@+id/descriptionText"
        android:layout_marginTop="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editDescription"
        android:inputType="text"
        android:layout_below="@+id/descriptionText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp" />

    <!--<Spinner-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/editDescription"-->
        <!--android:layout_below="@+id/descriptionText"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:spinnerStyle="@android:style/Widget.Spinner.DropDown" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/expense_due_date_edit_text"
        android:id="@+id/dueDateText"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editDescription"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="5"
        android:id="@+id/editDueDate"
        android:layout_below="@+id/dueDateText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        style='"@android:style/Widget.DeviceDefault.Light.Spinner"'
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/expense_amount_edit_text"
        android:id="@+id/amountText"
        android:layout_below="@+id/editDueDate"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editAmount"
        android:inputType="numberDecimal"
        android:layout_below="@+id/amountText"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"

        android:hint="@string/amount_hint_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/expense_notes_edit_text"
        android:id="@+id/notesText"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editAmount"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editNotes"
        android:inputType="text"
        android:layout_marginTop="15dp"
        android:layout_below="@id/notesText"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentStart="true" />

    <!--<DatePicker-->              <!--I WANTED TO USE THIS TO SELECT THE DUE DATE-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/datePicker"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_below="@+id/dueDateText"-->
        <!--android:layout_marginTop="15dp"-->
        <!--android:layout_marginLeft="5dp"-->
        <!--android:layout_marginRight="5dp"-->
        <!--android:scaleX=".5"-->
        <!--android:scaleY=".5" />-->

</RelativeLayout>